--- a/a.html
+++ b/a.html
@@ -11,10 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     /> -->
   <link rel="stylesheet" href="./materialize/css/materialize.min.css" />
-  <link
+  <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    /> -->
   <!-- <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -40,9 +40,9 @@
       <div class="card">
         <div class="card-content">
           <div class="card-header">
-            <!-- <div class="card-header-text">
+            <div class="card-header-text">
               <div class="truncate">
-                Havi Tables
+                Hello Havi Tables
               </div>
               <div class="actions valign-wrapper right">
                 <div class="search valign-wrapper">
@@ -57,7 +57,7 @@
                 <span class="waves-effect"><a href="#!"><i class="material-icons black-text"
                       onclick="addRow()">add_box</i></a></span>
               </div>
-            </div> -->
+            </div>
           </div>
 
           <div class="card-main-text">
@@ -75,15 +75,15 @@
                       <p>Action</p>
                     </th>
                     <th class="username-box">
-                      <div class="valign-wrapper filter-arrow">
+                      <div class="valign-wrapper">
                         <p>Name</p>
-                        <span class="waves-effect "><a href="#!"><i class="material-icons black-text"
+                        <span class="waves-effect"><a href="#!"><i class="material-icons black-text"
                               onclick="sortFname()"><img src="./icons/baseline_arrow_upward_black_18dp.png" />
                             </i></a></span>
                       </div>
                     </th>
                     <th class="username-box">
-                      <div class="valign-wrapper filter-arrow">
+                      <div class="valign-wrapper">
                         <p>Surname</p>
                         <span class="waves-effect"><a href="#!"><i class="material-icons black-text"
                               onclick="sortLname()"><img src="./icons/baseline_arrow_upward_black_18dp.png" />
@@ -91,7 +91,7 @@
                       </div>
                     </th>
                     <th class="doy-box">
-                      <div class="valign-wrapper filter-arrow">
+                      <div class="valign-wrapper">
                         <p>
                           Birth <br /> Year
                         </p>
@@ -101,7 +101,7 @@
                       </div>
                     </th>
                     <th class="city-box">
-                      <div class="valign-wrapper filter-arrow">
+                      <div class="valign-wrapper">
                         <p>
                           Birth <br /> Place
                         </p>
