modified edit feature

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
             <!-- modal data -->
           </div>
 
+          <div id="modal3" class="modal tags edit ">
+            <!-- modal data -->
+          </div>
+
           <div class="table">
             <table>
               <thead>
@@ -39,12 +43,7 @@
                       <span></span>
                     </label>
                   </th>
-                  <th class="actions-box ">
-                    <p>Action</p>
-                  </th>
-                  <th class="tags">
-                    <p>Tags</p>
-                  </th>
+                  
                   <th class="username-box">
                     <div class="valign-wrapper filter-arrow ">
 
@@ -100,6 +99,12 @@
                                 d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" /></svg>
                           </i></a></span>
                     </div>
+                  </th>
+                  <th class="actions-box ">
+                    <p>Action</p>
+                  </th>
+                  <th class="tags">
+                    <p>Tags</p>
                   </th>
                 </tr>
               </thead>
